--- a/advocacy.html
+++ b/advocacy.html
@@ -15,40 +15,37 @@
         <div class="hero-page-title"><h1>A Prophetic Voice for Justice</h1></div>
     </header>
 
-    <section class="intro-section">
+    <section class="legacy-forums-section">
         <div class="content-wrapper">
-            <h2>ADVOCACY AND POPULAR EDUCATION FOR GOOD GOVERNANCE (PEGG)</h2>
-            <div class="text-image-pair">
-                <div class="pair-text">
-                    <p>ISACC’s advocacy work has deep historical roots, culminating in the mobilization of church communities during the resistance to the Marcos regime. We organized <strong>Konfes (Konsensiya ng Febrero Siete)</strong>, a coalition that became a center of evangelical presence at the barricades during the February 1986 People Power uprising.</p>
-                </div>
-                <div class="pair-image">
-                    <img src="advocacy2.jpg" alt="Historical photo of a political event in Manila.">
-                </div>
-            </div>
-            <div class="text-image-pair">
-                <div class="pair-text">
-                    <p>Today, our long-term <strong>Popular Education for Good Governance (PEGG)</strong> program continues this legacy. A unique feature of our work is the integration of Biblical perspectives into the analysis of complex issues, intentionally training young people to become biblically literate and apply God’s Word to the public square.</p>
-                </div>
-                <div class="pair-image">
-                    <img src="advocacy3.jpg" alt="Historical photo of a street protest in Manila.">
-                </div>
-            </div>
-        </div>
-    </section>
-    
-    <section class="faith-politics-section">
-        <div class="content-wrapper">
-            <div class="initiative-card">
-                <div class="initiative-text">
-                    <h2>Faith and Politics Initiative</h2>
-                    <p>During the 2022 Presidential Election, we launched a major webinar series on “Faith and Politics.” In partnership with Evangelical scholars and experts, we aimed to help Christians engage in national transformation based on sound biblical-theological teachings.</p>
-                    <p>This initiative is a collaboration with the <strong>PCEC Justice, Peace and Reconciliation Commission (JPARCOM)</strong> and <strong>Langham Publishing (UK)</strong>. The series will result in a book that addresses the need for contextualized resources in a region where most seminaries rely on Western textbooks, hoping to be a valuable contribution to the conversation on theology and politics in the Philippines and Asia.</p>
-                </div>
-                <div class="initiative-image">
-                    <img src="advocacy4.jpeg" alt="Flyer for the Faith and Politics webinar series.">
-                </div>
-            </div>
+            <h2>A Legacy of Engagement: Key Fora & Seminars</h2>
+            <p>Throughout our history, ISACC has stimulated critical thinking by engaging churches, grassroots communities, and the public on vital issues. Notable events include:</p>
+            <img src="image4.jpg" alt="A photo from a forum event." class="legacy-main-image">
+            <ul class="legacy-events-list">
+                <li>
+                    <strong>Philippine Realities Conferences (1981, 1985):</strong>
+                    <p>These conferences stimulated reflection and concerted church responses to authoritarian rule.</p>
+                </li>
+                <li>
+                    <strong>Seminar on Philippine Socio-Cultural History (1984):</strong>
+                    <p>Conducted for executives of development agencies and church leaders, this seminar was led by nationalist thinker and scholar Renato Constantino.</p>
+                </li>
+                <li>
+                    <strong>Courses on Social Change & Christian Social Ethics (1985):</strong>
+                    <p>Both courses were led by John Howard Yoder, known for his book "The Politics of Jesus" and as a leading thinker on active non-violence.</p>
+                </li>
+                <li>
+                    <strong>Theology Encounters Revolution (1987):</strong>
+                    <p>A course by Andrew Kirk, then associate director of the London Institute for Contemporary Christianity, focusing on tensions confronting theology in a revolutionary situation.</p>
+                </li>
+                <li>
+                    <strong>The State as Servant and Subversive, Romans 13 and Revelation 13:</strong>
+                    <p>A lecture by Ronald Sider, author of "Rich Christians in an Age of Hunger" and chairperson of Evangelicals for Social Action.</p>
+                </li>
+                <li>
+                    <strong>Public Lectures and Symposia:</strong>
+                    <p>Numerous public events on critical issues such as human rights, vigilantism, national debt, insurgency, US Bases, women and tradition, delivered by national experts and leaders.</p>
+                </li>
+            </ul>
         </div>
     </section>
 
@@ -59,9 +56,9 @@
                 <div class="media-text">
                     <p>Our multi-media shows serve as culture-friendly learning tools for a people whose cognitive style is largely visual, acting as artistic statements of our commitment to wholistic transformation. Our productions include:</p>
                 </div>
-                <div class="media-image">
-                    <img src="advocacy5.png" alt="A photo from a theatre event.">
-                </div>
+            </div>
+            <div class="media-image" style="text-align: center; margin-bottom: 40px;">
+                <img src="advocacy5.png" alt="A photo from a theatre event." style="width: 100%; max-width: 600px; border-radius: 8px;">
             </div>
             <div class="productions-list-single-column">
                 <div class="production-item">
@@ -96,37 +93,40 @@
         </div>
     </section>
 
-    <section class="legacy-forums-section">
+    <section class="intro-section">
         <div class="content-wrapper">
-            <h2>A Legacy of Engagement: Key Fora & Seminars</h2>
-            <p>Throughout our history, ISACC has stimulated critical thinking by engaging churches, grassroots communities, and the public on vital issues. Notable events include:</p>
-            <img src="image4.jpg" alt="A photo from a forum event." class="legacy-main-image">
-            <ul class="legacy-events-list">
-                <li>
-                    <strong>Philippine Realities Conferences (1981, 1985):</strong>
-                    <p>These conferences stimulated reflection and concerted church responses to authoritarian rule.</p>
-                </li>
-                <li>
-                    <strong>Seminar on Philippine Socio-Cultural History (1984):</strong>
-                    <p>Conducted for executives of development agencies and church leaders, this seminar was led by nationalist thinker and scholar Renato Constantino.</p>
-                </li>
-                <li>
-                    <strong>Courses on Social Change & Christian Social Ethics (1985):</strong>
-                    <p>Both courses were led by John Howard Yoder, known for his book "The Politics of Jesus" and as a leading thinker on active non-violence.</p>
-                </li>
-                <li>
-                    <strong>Theology Encounters Revolution (1987):</strong>
-                    <p>A course by Andrew Kirk, then associate director of the London Institute for Contemporary Christianity, focusing on tensions confronting theology in a revolutionary situation.</p>
-                </li>
-                <li>
-                    <strong>The State as Servant and Subversive, Romans 13 and Revelation 13:</strong>
-                    <p>A lecture by Ronald Sider, author of "Rich Christians in an Age of Hunger" and chairperson of Evangelicals for Social Action.</p>
-                </li>
-                <li>
-                    <strong>Public Lectures and Symposia:</strong>
-                    <p>Numerous public events on critical issues such as human rights, vigilantism, national debt, insurgency, US Bases, women and tradition, delivered by national experts and leaders.</p>
-                </li>
-            </ul>
+            <h2>ADVOCACY AND POPULAR EDUCATION FOR GOOD GOVERNANCE (PEGG)</h2>
+            <div class="text-image-pair">
+                <div class="pair-text">
+                    <p>ISACC’s advocacy work has deep historical roots, culminating in the mobilization of church communities during the resistance to the Marcos regime. We organized <strong>Konfes (Konsensiya ng Febrero Siete)</strong>, a coalition that became a center of evangelical presence at the barricades during the February 1986 People Power uprising.</p>
+                </div>
+                <div class="pair-image">
+                    <img src="advocacy2.jpg" alt="Historical photo of a political event in Manila.">
+                </div>
+            </div>
+            <div class="text-image-pair">
+                <div class="pair-text">
+                    <p>Today, our long-term <strong>Popular Education for Good Governance (PEGG)</strong> program continues this legacy. A unique feature of our work is the integration of Biblical perspectives into the analysis of complex issues, intentionally training young people to become biblically literate and apply God’s Word to the public square.</p>
+                </div>
+                <div class="pair-image">
+                    <img src="advocacy3.jpg" alt="Historical photo of a street protest in Manila.">
+                </div>
+            </div>
+        </div>
+    </section>
+    
+    <section class="faith-politics-section">
+        <div class="content-wrapper">
+            <div class="initiative-card">
+                <div class="initiative-text">
+                    <h2>Faith and Politics Initiative</h2>
+                    <p>During the 2022 Presidential Election, we launched a major webinar series on “Faith and Politics.” In partnership with Evangelical scholars and experts, we aimed to help Christians engage in national transformation based on sound biblical-theological teachings.</p>
+                    <p>This initiative is a collaboration with the <strong>PCEC Justice, Peace and Reconciliation Commission (JPARCOM)</strong> and <strong>Langham Publishing (UK)</strong>. The series will result in a book that addresses the need for contextualized resources in a region where most seminaries rely on Western textbooks, hoping to be a valuable contribution to the conversation on theology and politics in the Philippines and Asia.</p>
+                </div>
+                <div class="initiative-image">
+                    <img src="advocacy4.jpeg" alt="Flyer for the Faith and Politics webinar series.">
+                </div>
+            </div>
         </div>
     </section>
 
