--- a/advocacy.html
+++ b/advocacy.html
@@ -57,8 +57,8 @@
                     <p>Our multi-media shows serve as culture-friendly learning tools for a people whose cognitive style is largely visual, acting as artistic statements of our commitment to wholistic transformation. Our productions include:</p>
                 </div>
             </div>
-            <div class="media-image" style="text-align: center; margin-bottom: 40px;">
-                <img src="advocacy5.png" alt="A photo from a theatre event." style="width: 100%; max-width: 600px; border-radius: 8px;">
+            <div class="media-image">
+                <img src="advocacy5.png" alt="A photo from a theatre event.">
             </div>
             <div class="productions-list-single-column">
                 <div class="production-item">
