--- a/about.html
+++ b/about.html
@@ -42,8 +42,8 @@
                 </div>
                 <div class="pillar">
                     <i class="fa-solid fa-hand-holding-heart"></i>
-                    <h3>Seeking Shalom for All</h3>
-                    <p>We are committed to the biblical vision of shalom—a world of peace and wholeness—working towards the restoration of all things in Christ.</p>
+                    <h3>Global Kingdom, Global People</h3>
+                    <p>We embrace a God who delights in every tribe, tongue, and nation, fostering a global family where diverse cultures enrich our shared faith.</p>
                 </div>
              </div>
         </div>
