--- a/advocacy.html
+++ b/advocacy.html
@@ -95,7 +95,7 @@
 
     <section class="intro-section">
         <div class="content-wrapper">
-            <h2>ADVOCACY AND POPULAR EDUCATION FOR GOOD GOVERNANCE (PEGG)</h2>
+            <h2>POPULAR EDUCATION FOR GOOD GOVERNANCE (PEGG)</h2>
             <div class="text-image-pair">
                 <div class="pair-text">
                     <p>ISACC’s advocacy work has deep historical roots, culminating in the mobilization of church communities during the resistance to the Marcos regime. We organized <strong>Konfes (Konsensiya ng Febrero Siete)</strong>, a coalition that became a center of evangelical presence at the barricades during the February 1986 People Power uprising.</p>
