--- a/publications.html
+++ b/publications.html
@@ -82,14 +82,16 @@
 
     <section class="author-section">
         <div class="content-wrapper">
-            <div class="author-image">
-                <img src="maggay.jpg" alt="Dr. Melba Padilla Maggay">
-            </div>
             <div class="author-bio">
-                <h3>Meet the Author</h3>
-                <h2>Dr. Melba Padilla Maggay</h2>
-                <p>Dr. Maggay’s writings are essential for anyone interested in the intersection of faith, culture, and social transformation. As a social anthropologist with a Ph.D. in Philippine Studies, she brings a unique and deeply informed perspective to her work. Her experience as an activist, particularly her role in the 1986 People Power Revolution, gives her a credible voice on issues of justice, history, and national identity. Readers should be interested because she doesn't just offer academic theory; she provides wisdom forged from real-world engagement, making complex social issues accessible and relevant to people of faith.</p>
-                <a href="https://en.wikipedia.org/wiki/Melba_Padilla_Maggay" target="_blank" class="learn-more-link">Learn More on Wikipedia <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                <div class="author-image">
+                    <img src="maggay.jpg" alt="Dr. Melba Padilla Maggay">
+                </div>
+                <div class="author-text-content">
+                    <h3>Meet the Author</h3>
+                    <h2>Dr. Melba Padilla Maggay</h2>
+                    <p>Dr. Maggay’s writings are essential for anyone interested in the intersection of faith, culture, and social transformation. As a social anthropologist with a Ph.D. in Philippine Studies, she brings a unique and deeply informed perspective to her work. Her experience as an activist, particularly her role in the 1986 People Power Revolution, gives her a credible voice on issues of justice, history, and national identity. Readers should be interested because she doesn't just offer academic theory; she provides wisdom forged from real-world engagement, making complex social issues accessible and relevant to people of faith.</p>
+                    <a href="https://en.wikipedia.org/wiki/Melba_Padilla_Maggay" target="_blank" class="learn-more-link">Learn More on Wikipedia <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                </div>
             </div>
         </div>
     </section>
