--- a/podcast.html
+++ b/podcast.html
@@ -31,7 +31,7 @@
                 <h3>Latest Episode:</h3>
                 <div class="video-container">
                     <iframe
-                        src="https://www.youtube.com/watch?v=tV0Jq68OqWI" 
+                        src="https://www.youtube.com/embed/tV0Jq68OqWI?si=knZJip8y3uX1mpZ2" 
                         title="Latest Isip-Isak YouTube video player"
                         frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
